--- a/EasyFood/app/src/main/res/values/strings.xml
+++ b/EasyFood/app/src/main/res/values/strings.xml
@@ -21,4 +21,14 @@
     <string name="desayuno_8_nombre">Matcha Con Arándano</string>
     <string name="desayuno_9_nombre">Pan Francés</string>
     <string name="desayuno_10_nombre">Wafles con Manzana</string>
+    <string name="postre_1_nombre">Brownie</string>
+    <string name="postre_2_nombre">Bunuelo</string>
+    <string name="postre_3_nombre">Cheesecake</string>
+    <string name="postre_4_nombre">Cpulant</string>
+    <string name="postre_5_nombre">Helado</string>
+    <string name="postre_6_nombre">Pistacho</string>
+    <string name="postre_7_nombre">Tiramisu</string>
+    <string name="postre_8_nombre">Torta de Hojaldre</string>
+    <string name="postre_9_nombre">Torta de Zanahoria</string>
+    <string name="postre_10_nombre">Turca</string>
 </resources>
